--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,8 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.hzkto.ball.MainActivity"
-    android:background="@drawable/bg">
+    tools:context="com.example.hzkto.ball.MainActivity">
 
     <com.example.hzkto.ball.system.MySurfaceView
         android:layout_width="match_parent"
