--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,11 +10,8 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.hzkto.ball.MainActivity">
 
-    <com.example.hzkto.ball.system.MySurfaceView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/surfaceView"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+    <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/surfaceView"></LinearLayout>
 </RelativeLayout>
