--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,5 +13,6 @@
     <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/surfaceView"></LinearLayout>
+            android:id="@+id/surfaceView"
+            android:orientation="horizontal"></LinearLayout>
 </RelativeLayout>
