--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -19,11 +19,9 @@
             android:background="?attr/colorPrimary"
             app:popupTheme="@style/AppTheme.PopupOverlay"
             android:contextClickable="false"
-            app:title="Шар"
+            app:title="@string/sphere"
             android:textAlignment="center" />
 
     </android.support.design.widget.AppBarLayout>
-
-    <!--<include layout="@layout/content_main" />-->
 
 </android.support.design.widget.CoordinatorLayout>
