--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -4,9 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".MainActivity">
     <item
-        android:icon="@android:drawable/ic_menu_help"
+        android:icon="@android:drawable/ic_dialog_info"
         android:id="@+id/action_info"
         android:orderInCategory="100"
-        android:title="@string/app_name"
+        android:title="Справка"
         app:showAsAction="always" />
 </menu>
