--- a/app/src/main/res/layout/f_performance.xml
+++ b/app/src/main/res/layout/f_performance.xml
@@ -2,8 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:gravity="center"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    tools:context="com.example.hzkto.ball.fragments.PerformanceFragment">
 
     <ScrollView
         android:layout_width="match_parent"
