--- a/app/src/main/res/layout/f_projections_2.xml
+++ b/app/src/main/res/layout/f_projections_2.xml
@@ -3,8 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.hzkto.ball.fragments.Projection1Fragment"
-    android:background="@android:color/background_light">
+    tools:context="com.example.hzkto.ball.fragments.Projection1Fragment">
 
     <!-- TODO: Update blank fragment layout -->
 
