--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,4 +17,33 @@
 
 <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="Side">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">@dimen/card_height</item>
+        <item name="android:orientation">horizontal</item>
+        <item name="android:layout_marginLeft">@dimen/activity_horizontal_margin</item>
+        <item name="android:layout_marginTop">@dimen/middle</item>
+        <item name="android:layout_marginRight">@dimen/activity_horizontal_margin</item>
+        <item name="android:layout_marginBottom">@dimen/middle</item>
+        <item name="android:padding">@dimen/middle</item>
+    </style>
+
+    <style name="Side.Front">
+        <item name="android:background">@drawable/btn</item>
+        <item name="android:layout_height">@dimen/btn</item>
+    </style>
+
+    <style name="Side.Back">
+        <item name="android:background">@android:color/white</item>
+        <item name="android:visibility">visible</item>
+    </style>
+
+    <style name="Card"/>
+
+    <style name="Card.Title">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">@android:color/white</item>
+    </style>
+
 </resources>
