--- a/app/src/main/res/layout/f_sphere.xml
+++ b/app/src/main/res/layout/f_sphere.xml
@@ -7,6 +7,7 @@
 
 
     <com.example.hzkto.ball.system.MySurfaceView
+        android:background="#00000000"
         android:id="@+id/f_sphere_svFrontal"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
