--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,7 @@
     <color name="colorAccent">#FF4081</color>
     <color name="colorTransparent">#00FF4081</color>
     <color name="colorNavheader">#D7D6D4</color>
+    <color name="oxford_blue">#263238</color>
+    <color name="orange_red">#FF3D00</color>
+    <color name="pacific_blue">#0091EA</color>
 </resources>
