--- a/app/src/main/res/layout/proj_axonometric_back.xml
+++ b/app/src/main/res/layout/proj_axonometric_back.xml
@@ -6,42 +6,49 @@
     android:orientation="vertical"
     android:layout_height="wrap_content">
 
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/proj_axonometric_back_tvPhi"
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp">
+        android:layout_height="match_parent"
+        android:background="@drawable/btn">
 
-        <AutoCompleteTextView
-
-            android:id="@+id/proj_axonometric_back_phi"
-            android:text="45"
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/proj_axonometric_back_tvPsi"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Угол Φ"
-            android:imeOptions="actionNext"
-            android:inputType="numberSigned"
-            android:maxLines="1" />
-    </android.support.design.widget.TextInputLayout>
+            android:layout_height="match_parent"
+            android:layout_marginTop="8dp">
 
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/proj_axonometric_back_tvPsi"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp">
+            <AutoCompleteTextView
 
-        <AutoCompleteTextView
+                android:id="@+id/proj_axonometric_back_psi"
+                android:text="35"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Угол Ψ"
+                android:imeOptions="actionNext"
+                android:inputType="numberDecimal"
+                android:maxLines="1" />
 
-            android:id="@+id/proj_axonometric_back_psi"
-            android:text="35"
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/proj_axonometric_back_tvPhi"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Угол Ψ"
-            android:imeOptions="actionNext"
-            android:inputType="numberSigned"
-            android:maxLines="1" />
+            android:layout_height="match_parent"
+            android:layout_marginTop="8dp">
 
-    </android.support.design.widget.TextInputLayout>
+            <AutoCompleteTextView
+
+                android:id="@+id/proj_axonometric_back_phi"
+                android:text="45"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Угол Φ"
+                android:imeOptions="actionNext"
+                android:inputType="numberDecimal"
+                android:maxLines="1" />
+        </android.support.design.widget.TextInputLayout>
+    </LinearLayout>
 
     <LinearLayout
         android:orientation="horizontal"
