--- a/app/src/main/res/layout/proj_oblique_back.xml
+++ b/app/src/main/res/layout/proj_oblique_back.xml
@@ -6,29 +6,11 @@
     android:orientation="vertical"
     android:layout_height="wrap_content">
 
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/proj_oblique_back_tvL"
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp">
-
-        <AutoCompleteTextView
-
-            android:id="@+id/proj_oblique_back_l"
-            android:text="1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Расстояние L"
-            android:imeOptions="actionNext"
-            android:inputType="numberDecimal"
-            android:maxLines="1" />
-    </android.support.design.widget.TextInputLayout>
-
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/proj_oblique_back_tvAlpha"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp">
+        android:layout_height="match_parent"
+        android:background="@drawable/btn">
 
         <AutoCompleteTextView
 
@@ -38,9 +20,35 @@
             android:layout_height="wrap_content"
             android:hint="Угол α"
             android:imeOptions="actionNext"
-            android:inputType="numberSigned"
+            android:inputType="numberDecimal"
             android:maxLines="1" />
-    </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/proj_oblique_back_tvAlpha"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="8dp">
+
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/proj_oblique_back_tvL"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="8dp">
+
+            <AutoCompleteTextView
+
+                android:id="@+id/proj_oblique_back_l"
+                android:text="1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Расстояние L"
+                android:imeOptions="actionNext"
+                android:inputType="numberDecimal"
+                android:maxLines="1" />
+        </android.support.design.widget.TextInputLayout>
+    </LinearLayout>
 
     <LinearLayout
         android:orientation="horizontal"
